padding-right in nav

--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@ body {
 nav {
     float: right;
     padding-top: 25px;
-	padding-left: 50px;
+	padding-right: 25px;
     font-size: 18px;
     font-weight: 500;
     text-decoration: none;
