--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Calibri', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -31,7 +31,8 @@ body {
 }
 
 .nav-menu {
-    float: right;
+	float: right;
+	margin-right: 75px;
     font-size: 18px;
     font-weight: 500;
     text-decoration: none;
