update letter spacing

--- a/css/index.css
+++ b/css/index.css
@@ -85,5 +85,12 @@ a{
 	padding-top: 100px;
 	text-align:center;
 	background-color: beige;
+	color: saddlebrown;
 	height: 200px;
+	letter-spacing: 5px;
+}
+
+.content-container-fluid{
+	letter-spacing: normal;
+	color: black;
 }
