--- a/css/index.css
+++ b/css/index.css
@@ -94,3 +94,53 @@ a{
 	letter-spacing: normal;
 	color: black;
 }
+
+/*container-fluid-2*/
+.container-fluid-2{
+	padding-top: 50px;
+	background-color: blanchedalmond;
+	height: 700px;
+}
+
+.container-fluid-2-content{
+	color: saddlebrown;
+	letter-spacing: 5px;
+	margin-left: 50px;
+}
+
+.container-fluid-2-content-2{
+	padding-top: 75px;
+	float: left;
+	margin-left: 50px;
+}
+
+.peta{
+	float: right;
+	margin-right: 50px;
+}
+
+.peta-size{
+	height: 600px;
+	width: 600px;
+}
+
+.container-fluid-3{
+	padding-top: 50px;
+	background-color: blanchedalmond;
+	height: 700px;
+}
+
+.container-fluid-3-content{
+	float: right;
+	margin-right: 50px;
+}
+
+.jakarta_foto{
+	float: left;
+	margin-left: 50px;
+}
+
+.jktfoto-size{
+	height: 600px;
+	width: 600px;
+}
