--- a/css/index.css
+++ b/css/index.css
@@ -157,8 +157,9 @@ a{
 .container-fluid-4-content{
 	background:  rgba(0, 0, 0, .65) url(../pict/Skyline-Jakarta-Indonesia.jpg);
 	background-blend-mode: darken;
+	background-position: center;
 	background-repeat: no-repeat;
-	background-size: 1200px 250px;
+	background-size: cover;
 	margin-left: 50px;
 	margin-right: 50px;
 	border-radius: 50px;
