--- a/css/wisata.css
+++ b/css/wisata.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #FFCEB2;
+    background-color: #FDDA7F;
 }
 
 /*navbar*/
@@ -23,7 +23,7 @@ body {
 }
 
 .navbar-background-1{
-	background-color: #FFCEB2;
+	background-color: #FDDA7F;
 }
 
 .logo {
@@ -114,6 +114,9 @@ hr{
 
 .text-content-1{
 	margin-left: 25px;
+}
+
+.tagg{
 	display: inline-flex;
 }
 
@@ -129,4 +132,14 @@ hr{
 	padding: 5px;
 	background-color: #D9D9D9;
 	border-radius: 5px;
+}
+
+.judul-content h2{
+	font-weight: bold;
+	font-size: 24px;
+}
+
+.creator-content-1 p{
+	font-style: italic;
+	font-size: 14px;
 }
