fixing background jumbotron

--- a/css/index.css
+++ b/css/index.css
@@ -68,7 +68,9 @@ a{
 .jumbotron-1{
 	background-image: url(../pict/landmark_jakarta.jpg);
 	background-size: 1512px 900px;
+	background-color: white;
 	background-repeat: no-repeat;
+	background-position: center;
 	height: 900px;
 	/*margin-top: 75px;*/
 }
