--- a/css/index.css
+++ b/css/index.css
@@ -366,6 +366,7 @@ a{
  }
 
 
+/*Footer*/
 .footer{
 	position: fixed;
 	bottom: 0;
@@ -376,7 +377,7 @@ a{
 	box-sizing: border-box;
 	width: 100%;
 	text-align: left;
-	font: bold 16px 'Times New Roman', Times, serif;
+	font: thin 16px sans-serif;
 	padding: 50px 50px 20px 50px;
 	
 }
@@ -389,9 +390,8 @@ a{
 }
 
 /* Footer left */
-
 .footer-distributed .footer-left{
-	width: 20%;
+	width: 30%;
 }
 
 .footer-distributed .logo-size-footer{
@@ -401,26 +401,24 @@ a{
 
 
 /* Footer Center */
-
 .footer-distributed .footer-center{
 	width: 35%;
 	text-align: center;
 	margin: 10px 10px;
 }
 
-
-
 .footer-distributed .footer-center i{
-	background-color: blanchedalmond;
 	font-size: 30px;
 	width: 40px;
 	height: 40px;
-
 	text-align: center;
-	
 	margin: 10px 10px;
 	vertical-align: middle;
-	color:#B45600;
+	color:rgb(238, 203, 151);
+}
+
+.footer-distributed .footer-center i:hover{
+	color: #965628;
 }
 
 .footer-distributed .footer-icons{
@@ -428,50 +426,74 @@ a{
 	margin-left: -120px;
 }
 
-
-
-
-
 /* Footer Right */
-
 .footer-distributed .footer-right{
-	width: 40%;
+	width: 30%;
 	text-align: center;
 	margin: 40px 10px;
-	
 }
 
-input[type=submit] {
-    
-    font-size: 15px;
-    background: #B45600;
-    color: white;
-    border-radius: 15px;
-    padding: 10px 20px;
-	height: 40px;
-    
-}
-
-input[type=email] {
-	
-    font-size: 13px;
-    border-radius: 10px;
-    padding: 10px 20px;
-	width: 290px;
-	height: 30px;
-}
-
-.fixed-footer {
-	font-family: 'Times New Roman', Times, serif;
+/*.fixed-footer {
     width: 100%;
     position: relative;
     background:blanchedalmond;
-    margin: 0 10px 30px 0;
+    margin: 0 10px 0 0;
     padding: 10px 0;
     color: black;
     text-align: center;
   }
   .fixed-footer {
     bottom: 0;
-  }
+  }*/
 
+.fixed-footer{
+	text-align: center;
+	font-size: 14px;
+	margin-top: 15px;
+	margin-bottom: 25px;
+}
+
+/*Form Footer*/
+.form-email{
+	width: 265px;
+	height: 36px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-left: 10px;
+	border-radius: 10px;
+	text-decoration: none;
+	border: none;
+	font-size: 14px;
+	font-family: 'EB Garamond', serif;
+	color: #965628;
+}
+
+.form-email:focus{
+	outline-style: solid;
+	outline-color: #965628;
+	outline-width: 3px;
+}
+
+/*form button*/
+.form-button{
+	margin-left: 10px;
+	height: 36px;
+	padding-left: 15px;
+	padding-right: 15px;
+	background-color: #965628;
+	border-radius: 15px;
+	font-size: 14px;
+	font-family: 'EB Garamond', serif;
+	color: white;
+	border:none;
+}
+
+.form-button:hover{
+	background-color: #663b1d;
+}
+
+.form-button:focus{
+	outline-style: solid;
+	outline-color: #965628;
+	outline-width: 3px;
+}
