--- a/css/artikel_wisata.css
+++ b/css/artikel_wisata.css
@@ -51,6 +51,10 @@ body {
 	margin-left: 35px;
 }
 
+.link-navigation-1-wisata{
+	color: #B45600;
+}
+
 a{
 	text-decoration: none;
 }
@@ -79,9 +83,12 @@ a{
 	position: relative;
 	width: 1250px;
 	margin: 10px auto;
-	background-color: white;
+	/*background-color: blue;*/
 	/*background-color: yellow;*/
-	padding: 50px;
+	padding-top: 50px;
+	padding-bottom: 50px;
+	padding-right: 25px;
+	padding-left: 25px;
 }
 
 /*.isi-content{
@@ -93,6 +100,11 @@ a{
 
 .judul-main{
 	margin-bottom: 30px;
+}
+
+.judul-main h1{
+	color: #B45600;
+	font-weight: bold;
 }
 
 .float-left-1{
@@ -115,12 +127,13 @@ a{
 }
 
 .float-right-1{
-	width: 350px;
+	width: 400px;
 	float: right;
 }
 
+/*Profil penulis*/
 .card-nama{
-	margin-left: 50px;
+	margin-left: 20px;
 	/*background-color: aquamarine;*/
 	padding-bottom: 20px;
 	padding-left: 10px;
@@ -148,4 +161,218 @@ a{
 
 hr{
 	margin-left: 50px;
+}
+
+/*Artikel lainnya*/
+.content-article-liyane{
+	margin-left: 20px;
+	/*background-color: yellow;*/
+	padding-left: 10px;
+	padding-right: 10px;
+	/*text-align: justify;*/
+}
+
+.content-article-liyane h3{
+	font-size: 18px;
+	font-weight: bold;
+	margin-bottom: 25px;
+}
+
+.picture-content-wisata img{
+	width: 110px;
+	height: 110px;
+	border-radius: 10px;
+}
+
+.content-wisata{
+	display: flex;
+	margin-bottom: 20px;
+}
+
+.text-content-wisata{
+	margin-left: 15px;
+	margin-top: -6px;
+}
+
+.tagg{
+	display: inline-flex;
+	font-size: 8px;
+}
+
+.tag-1 p{
+	margin-right: 10px;
+	margin-bottom: 5px;
+	padding: 2px 5px;
+	background-color: #D9D9D9;
+	border-radius: 5px;
+}
+
+.tag-2 p{
+	margin-right: 10px;
+	margin-bottom: 5px;
+	padding: 2px 5px;
+	background-color: #D9D9D9;
+	border-radius: 5px;
+}
+
+.judul-content a h2{
+	font-weight: bold;
+	font-size: 16px;
+	color: black;
+	margin-bottom: 5px;
+}
+
+.judul-content a h2:hover{
+	color: #B45600;;
+}
+
+.text-content-main p{
+	font-size: 10px;
+	margin-bottom: 5px;
+}
+
+.text-content-main p a{
+	font-style: italic;
+	text-decoration: none;
+	color: rgb(0, 88, 88);
+}
+
+.text-content-main p a:hover{
+	font-style: italic;
+	text-decoration: none;
+	color: #B45600;
+}
+
+/*Tags*/
+
+/*Footer*/
+.footer{
+	position: fixed;
+	bottom: 0;
+}
+
+.footer-distributed{
+	background-color: blanchedalmond;
+	box-sizing: border-box;
+	width: 100%;
+	text-align: left;
+	font: thin 16px sans-serif;
+	padding: 50px 50px 20px 50px;
+	
+}
+
+.footer-distributed .footer-left,
+.footer-distributed .footer-center,
+.footer-distributed .footer-right{
+	display: inline-block;
+	vertical-align: top;
+}
+
+/* Footer left */
+.footer-distributed .footer-left{
+	width: 30%;
+}
+
+.footer-distributed .logo-size-footer{
+	height: 125px;
+	width: 150px;
+}
+
+
+/* Footer Center */
+.footer-distributed .footer-center{
+	width: 35%;
+	text-align: center;
+	margin: 10px 10px;
+}
+
+.footer-distributed .footer-center i{
+	font-size: 30px;
+	width: 40px;
+	height: 40px;
+	text-align: center;
+	margin: 10px 10px;
+	vertical-align: middle;
+	color:rgb(238, 203, 151);
+}
+
+.footer-distributed .footer-center i:hover{
+	color: #965628;
+}
+
+.footer-distributed .footer-icons{
+	margin-top: 25px;
+	margin-left: -120px;
+}
+
+/* Footer Right */
+.footer-distributed .footer-right{
+	width: 30%;
+	text-align: center;
+	margin: 40px 10px;
+}
+
+/*.fixed-footer {
+    width: 100%;
+    position: relative;
+    background:blanchedalmond;
+    margin: 0 10px 0 0;
+    padding: 10px 0;
+    color: black;
+    text-align: center;
+  }
+  .fixed-footer {
+    bottom: 0;
+  }*/
+
+.fixed-footer{
+	text-align: center;
+	font-size: 14px;
+	margin-top: 15px;
+	margin-bottom: 25px;
+}
+
+/*Form Footer*/
+.form-email{
+	width: 265px;
+	height: 36px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-left: 10px;
+	border-radius: 10px;
+	text-decoration: none;
+	border: none;
+	font-size: 14px;
+	font-family: 'EB Garamond', serif;
+	color: #965628;
+}
+
+.form-email:focus{
+	outline-style: solid;
+	outline-color: #965628;
+	outline-width: 3px;
+}
+
+/*form button*/
+.form-button{
+	margin-left: 10px;
+	height: 36px;
+	padding-left: 15px;
+	padding-right: 15px;
+	background-color: #965628;
+	border-radius: 15px;
+	font-size: 14px;
+	font-family: 'EB Garamond', serif;
+	color: white;
+	border:none;
+}
+
+.form-button:hover{
+	background-color: #663b1d;
+}
+
+.form-button:focus{
+	outline-style: solid;
+	outline-color: #965628;
+	outline-width: 3px;
 }
