--- a/css/artikel_wisata.css
+++ b/css/artikel_wisata.css
@@ -50,8 +50,13 @@ body {
 	margin-left: 35px;
 }
 
-.link-navigation-1-wisata{
+.link-navigation-1-aktif{
 	color: #B45600;
+}
+
+.link-navigation-1-aktif:hover{
+	color: #B45600;
+	padding-bottom: 5px;
 }
 
 a{
