--- a/css/index.css
+++ b/css/index.css
@@ -64,6 +64,16 @@ a{
 	/*border-bottom: 1px solid #B45600;*/
 }
 
+.link-nav-1-aktif{
+	color: #B45600;
+	padding-bottom: 5px;
+}
+
+.link-nav-1-aktif:hover{
+	color: #B45600;
+	padding-bottom: 5px;
+}
+
 /*Jumbotron*/
 .jumbotron-1{
 	background-image: url(../pict/landmark_jakarta.png);
