--- a/css/form_daftar.css
+++ b/css/form_daftar.css
@@ -82,7 +82,7 @@ a{
 
 /*Icon Reservasi Tiket*/
 .all{
-	margin: -100px auto;
+	margin: -100px auto 50px auto;
 	padding: 50px 25px;
 	width: 1200px;
 	background-color: white;
@@ -160,16 +160,28 @@ th{
 }
 
 /*Cek Harga Tiket*/
-form {
-	display: grid;
+.formulir h5{
+	text-align: center;
+	margin-top: 25px;
+	margin-bottom: 50px;
+	font-size: 24px;
+}
+
+.formulir{
+	width: 800px;
+	margin: 2rem auto 0 auto;
+	padding: 1em;
+	border-radius: 10px;
 	padding: 1em;
 	background: #f9f9f9;
 	border: 1px solid #c1c1c1;
-	margin: 2rem auto 0 auto;
-	width: 800px;
-	padding: 1em;
-	grid-template-columns: 200px 1fr;
+} 
+
+.formulir form{
+	display: grid;
+	grid-template-columns: 250px 1fr;
 	grid-gap: 16px;
+	
 }
 
 form input {
@@ -177,31 +189,172 @@ form input {
 	border: 1px solid #9c9c9c;
 }
 
-form .button {
-	background: lightgrey;
+.button {
+	background: #d68232;
+	color: white;
 	padding: 0.7em;
 	width: 100%;
 	border: 0;
+	border-radius: 5px;
+	margin-top: 10px;
 }
 
-form .button:hover {
-	background: gold;
+.button:hover {
+	background: #B45600;
+	color: white;
 }
 
 label {
 	grid-column: 1 / 2;
 	padding: 0.5em 0.5em 0.5em 0;
+	margin-bottom: 5px;
 }
 
-input, .button {
+input {
 	grid-column: 2 / 3;
 }
 
 .pengunjung{
-	padding: 0.7em;
-	margin-bottom: 0.5rem;
+	padding: 5px;
+	border-radius: 5px;
 }
 
 .pengunjung:focus {
-	outline: 3px solid gold;
+	outline: 3px solid #B45600;
+}
+
+/*Next*/
+
+
+
+/*Footer*/
+.footer{
+	position: fixed;
+	bottom: 0;
+}
+
+.footer-distributed{
+	background-color: blanchedalmond;
+	box-sizing: border-box;
+	width: 100%;
+	text-align: left;
+	font: thin 16px sans-serif;
+	padding: 50px 50px 20px 50px;
+	
+}
+
+.footer-distributed .footer-left,
+.footer-distributed .footer-center,
+.footer-distributed .footer-right{
+	display: inline-block;
+	vertical-align: top;
+}
+
+/* Footer left */
+.footer-distributed .footer-left{
+	width: 30%;
+}
+
+.footer-distributed .logo-size-footer{
+	height: 125px;
+	width: 150px;
+}
+
+
+/* Footer Center */
+.footer-distributed .footer-center{
+	width: 35%;
+	text-align: center;
+	margin: 10px 10px;
+}
+
+.footer-distributed .footer-center i{
+	font-size: 30px;
+	width: 40px;
+	height: 40px;
+	text-align: center;
+	margin: 10px 10px;
+	vertical-align: middle;
+	color:rgb(238, 203, 151);
+}
+
+.footer-distributed .footer-center i:hover{
+	color: #965628;
+}
+
+.footer-distributed .footer-icons{
+	margin-top: 25px;
+	margin-left: -120px;
+}
+
+/* Footer Right */
+.footer-distributed .footer-right{
+	width: 30%;
+	text-align: center;
+	margin: 40px 10px;
+}
+
+/*.fixed-footer {
+    width: 100%;
+    position: relative;
+    background:blanchedalmond;
+    margin: 0 10px 0 0;
+    padding: 10px 0;
+    color: black;
+    text-align: center;
+  }
+  .fixed-footer {
+    bottom: 0;
+  }*/
+
+.fixed-footer{
+	text-align: center;
+	font-size: 14px;
+	margin-top: 15px;
+	margin-bottom: 25px;
+}
+
+/*Form Footer*/
+.form-email{
+	width: 235px;
+	height: 36px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-left: 10px;
+	border-radius: 10px;
+	text-decoration: none;
+	border: none;
+	font-size: 14px;
+	font-family: 'EB Garamond', serif;
+	color: #965628;
+}
+
+.form-email:focus{
+	outline-style: solid;
+	outline-color: #965628;
+	outline-width: 3px;
+}
+
+/*form button*/
+.form-button{
+	margin-left: 10px;
+	height: 36px;
+	padding-left: 15px;
+	padding-right: 15px;
+	background-color: #965628;
+	border-radius: 15px;
+	font-size: 14px;
+	font-family: 'EB Garamond', serif;
+	color: white;
+	border:none;
+}
+
+.form-button:hover{
+	background-color: #663b1d;
+}
+
+.form-button:focus{
+	outline-style: solid;
+	outline-color: #965628;
+	outline-width: 3px;
 }
