--- a/css/budaya.css
+++ b/css/budaya.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'EB Garamond', serif;
     margin: 0;
     padding: 0;
     background-color: #f5f5f5;
