--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Source Sans Pro', 'Times New Roman', Times, serif;
+    font-family: 'EB Garamond', 'Times New Roman', Times, serif;
     margin: 0;
     padding: 0;
 	background-color: blanchedalmond;
