--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,7 @@ body {
 
 /*navbar*/
 .navbar-1{
+	font-family: 'EB Garamond', serif;
 	padding-top: 10px;
 	padding-left: 50px;
 	padding-right: 50px;
